--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta property="og:type" content="website">
+
   <meta charset="utf-8">
   <title>Omegle on Nostr</title>
-  <base href="/">
+  <base href="/omegle-nostr">
+
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Omegle: Talk to strangers!">
+  <meta property="og:description" content="Your friends are boring. Strangers are better.">
+  <meta property="og:url" content="https://antonioconselheiro.github.io/omegle-nostr">
+  <meta property="og:image" content="https://antonioconselheiro.github.io/omegle-nostr/assets/icon.png">
+  <meta property="og:site_name" content="Omegle">
+  <meta itemprop="description" content="Omegle is a great place to meet new friends. When you use Omegle, we pick another user at random and let you have a one-on-one chat with each other.">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
   <app-root></app-root>
