estabilizando uma versão com o layout definido

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <meta itemprop="description" content="Omegle is a great place to meet new friends. When you use Omegle, we pick another user at random and let you have a one-on-one chat with each other.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="icon" type="image/png" href="/omegle-nostr/assets/favicon.png">
 </head>
 <body>
   <app-root></app-root>
