subindo estruturas do serviço integrados via nostr

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   <meta property="og:type" content="website">
 
   <meta charset="utf-8">
-  <title>Omegle on Nostr</title>
+  <title>Omegle: Talk to strangers!</title>
   <base href="/omegle-nostr">
 
   <meta property="og:type" content="website">
