refatorando para diminuir a complexidade

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <title>Omegle: Talk to strangers!</title>
-  <base href="/omegle-nostr">
+  <base href="/omeglestr">
 
   <meta property="og:type" content="website">
   <meta property="og:title" content="Omegle: Talk to strangers!">
@@ -16,7 +16,7 @@
   <meta itemprop="description" content="Omegle is a great place to meet new friends. When you use Omegle, we pick another user at random and let you have a one-on-one chat with each other.">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="/omegle-nostr/assets/favicon.png">
+  <link rel="icon" type="image/png" href="/omeglestr/assets/favicon.png">
 </head>
 <body>
   <app-root></app-root>
