--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,27 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Omegle: Talk to strangers!">
   <meta property="og:description" content="Your friends are boring. Strangers are better.">
-  <meta property="og:url" content="https://antonioconselheiro.github.io/omegle-nostr">
-  <meta property="og:image" content="https://antonioconselheiro.github.io/omegle-nostr/assets/icon.png">
+  <meta property="og:url" content="https://antonioconselheiro.github.io/omeglestr/#/chat">
+  <meta property="og:image" content="https://antonioconselheiro.github.io/omeglestr/assets/icon.png">
+  <meta property="og:image:type" content="image/png"/>
+  <meta property="og:image:width" content="512"/>
+  <meta property="og:image:height" content="512"/>
   <meta property="og:site_name" content="Omegle">
   <meta itemprop="description" content="Omegle is a great place to meet new friends. When you use Omegle, we pick another user at random and let you have a one-on-one chat with each other.">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="https://antonioconselheiro.github.io/omeglestr/#/chat">
+  <meta name="twitter:image" content="https://antonioconselheiro.github.io/omeglestr/assets/icon.png"/>
+  <meta name="twitter:creator" content="@mempool">
+  <meta name="twitter:title" content="The Mempool Open Source Project®">
+  <meta name="twitter:description" content="Explore the full Bitcoin ecosystem with The Mempool Open Source Project®. See the real-time status of your transactions, get network info, and more."/>
+  <meta name="twitter:domain" content="mempool.space">
+
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon.png">
+  <link rel="shortcut icon" href="/assets/icon.png">
+
+  <link rel="manifest" href="manifest.webmanifest">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="/omeglestr/assets/favicon.png">
