incluindo endereço onion

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta property="og:type" content="website">
+  <meta name="author" content="António Conselheiro">
+  <meta http-equiv="onion-location" content="omegleau2uz72h5rmzm2vik5tgkcazsl5tfg7oafp4h3agbqomyvicqd.onion" />
 
   <meta charset="utf-8">
   <title>Omegle: Talk to strangers!</title>
