incluindo aviso sonoro

--- a/src/index.html
+++ b/src/index.html
@@ -26,14 +26,16 @@
   <meta name="twitter:title" content="Omegle: Talk to strangers!">
   <meta name="twitter:description" content="Your friends are boring. Strangers are better."/>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icon.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icon.png">
-  <link rel="shortcut icon" href="/assets/icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/icon.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/icon.png">
+  <link rel="shortcut icon" href="./assets/icon.png">
 
   <link rel="manifest" href="manifest.webmanifest">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="/omeglestr/assets/favicon.png">
+
+  <link rel="icon" type="image/png" href="./assets/favicon.png">
+  <link rel="prefetch" href="./assets/sound-notification.wav">
 </head>
 <body>
   <app-root></app-root>
